# roswell-kinetic-devel

./: README.md
roswell_defs/: .package.xml.swp  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
roswell_defs/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  roswell_defs-msg-extras.cmake.develspace.in
roswell_defs/cmake/: roswell_defs-genmsg-context.py  roswell_defs-genmsg.cmake
roswell_defs/config/: install.bash
roswell_defs/launch/: .fake_roswell.launch.swn  .fake_roswell.launch.swo  .fake_roswell.launch.swp  bringup_roswell.launch  fake_roswell.launch  fake_roswell.launch.bck  point_head.launch  roswell_follow.launch  teleop.launch  upload_roswell.launch
roswell_defs/params/: .roswell.yaml.swn  .roswell.yaml.swo  .roswell.yaml.swp  diagnostics.yaml  diagnostics_gazebo.yaml  maxwell.yaml  roswell.yaml  roswell.yaml.old  roswell_gazebo.yaml.old
roswell_defs/scripts/: .pick_and_place.py.swp  joint_states_listener.py  pick_and_place.py  point_head.py  roswell_teleop.py  sound_utilities.py
roswell_defs/srv/: FindTables.srv
roswell_defs/urdf/: .maxwell.urdf.swp  .roswell.urdf.swh  .roswell.urdf.swi  .roswell.urdf.swj  .roswell.urdf.swk  .roswell.urdf.swl  .roswell.urdf.swm  .roswell.urdf.swn  .roswell.urdf.swo  .roswell.urdf.swp  roswell.urdf
roswell_gazebo_demo/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
roswell_gazebo_demo/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
roswell_gazebo_demo/launch/: .demo.launch.swp  awkscript  awkscript.indigo  awkscript.notes  demo.launch  demo.launch.indigo  fetch_square.launch  notes  notes2  notes3  roswell_nav.launch  roswell_rviz.launch
roswell_gazebo_demo/lib/: .navfn.cpp.swp
roswell_gazebo_demo/maps/: test_zone.yaml
roswell_gazebo_demo/scripts/: .demo.py.bck.swp  .demo.py.swh  .demo.py.swi  .demo.py.swj  .demo.py.swk  .demo.py.swl  .demo.py.swm  .demo.py.swn  .demo.py.swo  .demo.py.swp  demo.py  square.py  (+1 more)
roswell_navigation/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
(+292 files in other folders)
