<package>
  <name>roswell_gazebo_demo</name>
  <version>0.6.1</version>
  <description>
    Demos for roswell_gazebo package.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/roswell_gazebo_demo</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>roswell_gazebo</run_depend>
  <run_depend>roswell_moveit_config</run_depend>
  <run_depend>roswell_navigation</run_depend>
  <run_depend>moveit_python</run_depend>
  <run_depend>simple_grasping</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
</package>
